--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -9,6 +9,7 @@
         <!--from static file import css -->
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+        {% block extra_head %}{% endblock %}
     </head>
     <body>
         <div class = "container-fluid">
@@ -18,15 +19,50 @@
                     <!-- insert default navigation text for every page -->
                      <ul class="sidebar-nav">
                          <li><a href="{% url 'index' %}">{% trans "Home" %}</a></li>
-                         <li><a href="">{% trans "All books" %}</a></li>
+                         <li><a href="{% url 'books' %}">{% trans "All books" %}</a></li>
                          <li><a href="">{% trans "All authors" %}</a></li>
                      </ul>
                 {% endblock %}
                 </div>
                 <div class="col-sm-10">
                 {% block content %}
-                     <!-- default content text (typically empty) -->
+                    
                 {% endblock %}
+                {% block pagination %}
+                        {% if is_paginated %}
+                            <nav aria-label="Page navigation">
+                            <ul class="pagination justify-content-center">
+
+                                {% if page_obj.has_previous %}
+                                <li class="page-item">
+                                    <a class="page-link" href="{{ request.path }}?page={{ page_obj.previous_page_number }}">{% trans "previous" %}</a>
+                                </li>
+                                {% else %}
+                                <li class="page-item disabled">
+                                    <span class="page-link">{% trans "previous" %}</span>
+                                </li>
+                                {% endif %}
+
+                                <li class="page-item active" aria-current="page">
+                                <span class="page-link">
+                                    {% blocktrans %}Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.{% endblocktrans %}
+                                </span>
+                                </li>
+
+                                {% if page_obj.has_next %}
+                                <li class="page-item">
+                                    <a class="page-link" href="{{ request.path }}?page={{ page_obj.next_page_number }}">{% trans "next" %}</a>
+                                </li>
+                                {% else %}
+                                <li class="page-item disabled">
+                                    <span class="page-link">{% trans "next" %}</span>
+                                </li>
+                                {% endif %}
+
+                            </ul>
+                            </nav>
+                        {% endif %}
+                    {% endblock %}
                 </div>
             </div>
         </div>
