--- a/catalog/templates/catalog/book_list.html
+++ b/catalog/templates/catalog/book_list.html
@@ -12,6 +12,6 @@
     {% endfor %}
 </ul>
 {% else %}
-    <p>{% trans "There are no books in the library."}</p>
+    <p>{% trans "There are no books in the library." %}</p>
 {% endif %}
 {% endblock %}
