commit part 10 Django tutorial
second commit in part8

first commit part 9

first commit part10

first commit part 10

second commit in part 10

last commit part 10

--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -41,6 +41,14 @@
                             <li><a href="{% url 'author-create' %}">{% trans "Create author" %}</a></li>
                             {% endif %}
                         {% endif %}
+                        {% if user.is_staff %}
+                        <hr>
+                            <li>Staff</li>
+                            <li><a href="{% url 'my-borrowed' %}">All borrowed</a></li>
+                            {% if perms.catalog.add_author %}
+                            <li><a href="{% url 'author-create' %}">Create author</a></li>
+                            {% endif %}
+                        {% endif %}
                      </ul>
                 {% endblock %}
                 </div>
