commit part 9 Django tutorial

--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -1,7 +1,9 @@
 {% load i18n %}
 
+{% url 'password_reset_confirm' uidb64=uid token=token as reset_link %}
+
 {% blocktrans %}
 Someone asked for password reset for email {{ email }}. Follow the link below:
 
-{{ protocol}}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
+{{ protocol }}://{{ domain }}{{ reset_link }}
 {% endblocktrans %}
