--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -20,7 +20,7 @@
                      <ul class="sidebar-nav">
                          <li><a href="{% url 'index' %}">{% trans "Home" %}</a></li>
                          <li><a href="{% url 'books' %}">{% trans "All books" %}</a></li>
-                         <li><a href="">{% trans "All authors" %}</a></li>
+                         <li><a href="{% url 'authors' %}">{% trans "All authors" %}</a></li>
                         {% if user.is_authenticated %}
                             <li>User: {{ user.get_username }}</li>
                             <li><a href="{% url 'my-borrowed' %}">{% trans "My Borrowed" %}</a></li>
@@ -32,6 +32,14 @@
                             </li>
                         {% else %}
                             <li><a href="{% url 'login' %}?next={{ request.path }}">{% trans "Login" %}</a></li>
+                        {% endif %}
+                        {% if user.is_staff %}
+                        <hr>
+                            <li>{% trans "Staff" %}</li>
+                            <li><a href="{% url 'my-borrowed' %}">{% trans "All borrowed" %}</a></li>
+                            {% if perms.catalog.add_author %}
+                            <li><a href="{% url 'author-create' %}">{% trans "Create author" %}</a></li>
+                            {% endif %}
                         {% endif %}
                      </ul>
                 {% endblock %}
